[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/character/world_status/WorldStatus.gd" type="Script" id=1]

[node name="WorldStatus" type="Node2D"]
visible = false
light_mask = 0
script = ExtResource( 1 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
